# surface_laplacian

./: .gitignore  README.md  pyproject.toml
examples/: cotan.py  null.py
src/surface_laplacian/: __init__.py  core.py  operators.py  utils.py
tests/: equal_igl.py
