[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surface_laplacian"
version = "0.0.1"
authors = [
    {name = "Santiago F. Caracciolo", email = "santiago.caracciolo@gmail.com"},
]
description = "Implementation of surface Laplacian on triangle meshes. Notably, stiffness and mass matrices are computed to get the Discrete Laplace Operator."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "open3d"
]
